--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,9 @@
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
 * text=auto
+*.xaml                      linguist-detectable=true
+MLTA-1-2.csproj             linguist-detectable=false
+*.xaml                      linguist-language=xml
 
 ###############################################################################
 # Set default behavior for command prompt diff.
